--- a/src/week1/day5/발표.md
+++ b/src/week1/day5/발표.md
@@ -89,6 +89,68 @@ public class Main {
 }
 
 ```
+```java
+import java.io.BufferedReader;
+import java.io.InputStreamReader;
+import java.io.IOException;
+import java.util.LinkedList;
+import java.util.Queue;
+import java.util.StringTokenizer;
+
+public class PrinterQueue {
+public static void main(String[] args) {
+BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
+int T = Integer.parseInt(br.readLine());
+
+        StringBuilder result = new StringBuilder();
+        for (int t = 0; t < T; t++) {
+            StringTokenizer st = new StringTokenizer(br.readLine());
+            int N = Integer.parseInt(st.nextToken());
+            int M = Integer.parseInt(st.nextToken()); 
+
+            Queue<Document> queue = new LinkedList<>();
+            st = new StringTokenizer(br.readLine());
+            for (int i = 0; i < N; i++) {
+                int priority = Integer.parseInt(st.nextToken());
+                queue.add(new Document(i, priority));
+            }
+
+            int printOrder = 0;
+            while (!queue.isEmpty()) {
+                Document current = queue.poll();
+                boolean hasHigherPriority = false;
+                for (Document doc : queue) {
+                    if (doc.priority > current.priority) {
+                        hasHigherPriority = true;
+                        break;
+                    }
+                }
+
+                if (hasHigherPriority) {
+                    queue.add(current);
+                } else {
+                    printOrder++;
+                    if (current.index == M) {
+                        result.append(printOrder).append("\n");
+                        break;
+                    }
+                }
+            }
+        }
+        System.out.print(result);
+    }
+
+    static class Document {//이너 클래스
+        int index;
+        int priority;
+
+        Document(int index, int priority) {
+            this.index = index;
+            this.priority = priority;
+        }
+    }
+}
+```
 ## 💎 시간 복잡도
 
 `N` : 문서의 개수
