--- a/src/week1/day5/발표.md
+++ b/src/week1/day5/발표.md
@@ -22,7 +22,7 @@ ex) 4개의 문서 [A,B,C,D]:          중요도 [2,1,4,3]  ->    출력 순서 
 - 궁금한 특정 문서가 출력되는 순서 값
 ## 💎 알고리즘 설계
 
-1) 입력 값 받기 - [소요되는 시간 절약 위해 BufferedReader 사용](https://velog.io/@langoustine/Scanner-VS-BufferedReader)
+1) 입력 값 받기 - BufferedReader
 
 2) Queue 초기화 - Queue 를 LinkedList 로 구현, 이때 원소의 형태는 int [] 로 `초기 위치 , 중요도` 를 넣어준다.
 
@@ -175,3 +175,15 @@ int T = Integer.parseInt(br.readLine());
 - LinkedList로 구현하는 경우
   - 메모리를 아낄 수 있다.
   ![img_1.png](img_1.png)
+
+
+<details>
+<summary>출처</summary>
+<div>
+
+[Queue가 LinkedList로 구현된는 이유](https://velog.io/@eora21/queue%EB%8A%94-%EC%99%9C-LinkedList%EB%A1%9C-%EA%B5%AC%ED%98%84%EB%90%98%EB%8A%94%EA%B0%80)
+
+[소요되는 시간 절약 위해 BufferedReader 사용](https://velog.io/@langoustine/Scanner-VS-BufferedReader)
+
+</div>
+</details>
