--- a/src/week2/day2/P2667.md
+++ b/src/week2/day2/P2667.md
@@ -1,3 +1,26 @@
+# 💡**문제 분석 요약**
+
+입력
+
+`N`(5≤ N ≤ 25) : 지도의 크기
+
+N개의 자료
+
+출력
+
+첫째 줄에 단지수, 둘째 줄에 각 단지 내 집 수
+
+# 💡**알고리즘 설계**
+
+- 입력값 받기
+- 노드값 받기→ string 의 요소 각각(char)을 int로 변환하는 방법 - charAt 쓰기
+- dfs 실행시 각 노드에 대해 4방향으로 실행
+
+
+
+# 💡코드
+
+```java
 package week2.day2;
 
 import java.util.*;
@@ -37,7 +60,7 @@ public class P2667{
       for (int j =1;j <=n ;j++){
         if (nodes[i][j]==1 && !visited[i][j])
         {
-          int result = dfs_stack(i,j);
+          int result = dfs(i,j);
           list.add(result);//집 1단체의 개수
           cnt++;
         }
@@ -70,6 +93,58 @@ public class P2667{
     return result;
 
   }
+}
+```
+
+# 💡시간복잡도
+
+T(n) = O(n^2) + O(n^2) = O(n^2)
+
+# 💡 틀린 이유
+
+접근 방법이 어려웠다.
+
+1) 노드 값을 string 으로 받고 이를 바로 int로 변환하는 것
+
+```java
+        nodes[i][j]=str.charAt(j-1)-'0';//string 의 요소 각각을 int로 변환하는 방법
+```
+
+2) 결과값을 sort로 오름차순 정렬 부분
+
+```java
+    Collections.sort(list);
+```
+
+3) dfs 실행시 4방향에 대해서 진행하는 부분
+
+```java
+public static int dfs(int i, int j){
+    int result = 0;
+
+    visited[i][j] = true;
+    result++;
+    for (int k = 0 ; k < 4; k++){
+      int nx = dx[k]+i;
+      int ny = dy[k]+j;
+
+      if (nx>=1 && ny>=1 && nx<=n && ny<=n && !visited[nx][ny] && nodes[nx][ny] == 1)
+      {
+        result += dfs(nx,ny);//dfs 의 결과 합산
+      }
+    }
+    return result;
+
+  }
+```
+
+# 💡 느낀점 or 기억할정보
+
+dfs,bfs 문제에 많이 익숙해져야겠다.
+
+위 문제를 dfs_stack으로 구현해봤다.
+
+```java
   public static int dfs_stack(int i, int j){
     int result = 0;
     Stack<int[]> stack = new Stack<>();
@@ -100,4 +175,6 @@ public class P2667{
     return result;
 
   }
-}
+```
+
+[참고 블로그](https://velog.io/@richsubin/%EB%B0%B1%EC%A4%80-2667%EB%B2%88-%EB%8B%A8%EC%A7%80%EB%B2%88%ED%98%B8%EB%B6%99%EC%9D%B4%EA%B8%B0-JAVA)
