--- a/src/week2/day4/P1012.md
+++ b/src/week2/day4/P1012.md
@@ -118,4 +118,8 @@ T(n) = O(nm) x O(n+e) = O(n^2)
 
 # 💡 느낀점 or 기억할정보
 
-P11724  + P2667 을 섞은 문제
+`P11724  + P2667 을 섞은 문제`
+
+아래 글처럼, bfs로도 풀어보자
+
+[[Java] 백준 1012번 [유기농 배추] 자바](https://velog.io/@lifeisbeautiful/Java-백준-1012번-유기농-배추-자바)
