--- a/src/week2/day4/P1012.md
+++ b/src/week2/day4/P1012.md
@@ -116,10 +116,90 @@ T(n) = O(nm) x O(n+e) = O(n^2)
 
 가로 인덱스와 세로 인덱스가 헷갈렸다.
 
+# 💡 틀린 이유 or 다른풀이
+
+- dfs 스택 풀이 이지만 조금 다른
+```java
+static void DFS(int x, int y) {
+		stack.add(new Node(x, y));
+		visit[y][x] = true;
+		
+		while( !stack.isEmpty() ) {
+			Node node = stack.pop();
+			
+			for(int i=0; i<4; i++) {
+				nowX = node.x + dirX[i];
+				nowY = node.y + dirY[i];
+				
+				if( Range_check() && visit[nowY][nowX] == false && map[nowY][nowX] == 1) {
+					stack.push(new Node(nowX, nowY));
+					visit[nowY][nowX] = true;
+				}
+			}	
+		}
+	}
+	
+	static boolean Range_check() {
+		return (nowX < M && nowY < N && nowX >= 0 && nowY >= 0);
+	}
+```
+`
+나는 boolean flag 를 사용했는데 위 풀이에서는 사용하지 않았다. `
+
+- bfs 사용 풀이
+
+```java
+static void BFS(int x, int y) {
+    que.offer(new Node(x, y));
+    visit[y][x] = true;
+
+    while( !que.isEmpty() ) {
+        Node node = que.poll();
+
+        for(int i=0; i<4; i++) {
+            now_x = node.x + dirX[i];
+            now_y = node.y + dirY[i];
+
+            if(Range_check() && visit[now_y][now_x] == false && map[now_y][now_x] == 1) {           
+                que.offer(new Node(now_x, now_y));
+                visit[now_y][now_x] = true;
+            }
+
+        }
+    }
+}
+
+public static boolean Range_check() {
+    return (now_x >= 0 && now_x < M && now_y >= 0 && now_y < N);
+}	
+```
+
+- dfs 재귀 사용
+
+```java
+public static void DFS(int x, int y) {
+		visit[y][x] = true;
+
+		for(int i=0; i<4; i++) {
+			now_x = x + dirX[i];
+			now_y = y + dirY[i];
+
+			if(Range_check() && visit[now_y][now_x] == false && map[now_y][now_x] == 1) {
+				DFS(now_x, now_y);
+			}
+
+		}
+	}
+
+static boolean Range_check() {
+    return (now_y < N && now_y >= 0 && now_x < M && now_x >= 0);
+}
+```
+
 # 💡 느낀점 or 기억할정보
 
 `P11724  + P2667 을 섞은 문제`
+라고 생각했다.
 
-아래 글처럼, bfs로도 풀어보자
 
 [[Java] 백준 1012번 [유기농 배추] 자바](https://velog.io/@lifeisbeautiful/Java-백준-1012번-유기농-배추-자바)
