[week2-8,5 옵션2]수정

--- a/src/week2/day5/P1697.md
+++ b/src/week2/day5/P1697.md
@@ -93,3 +93,47 @@ T(m) = O(m)
 - 3개의 노드를 탐색하는 방법이 이전까지와는 달라 생소했다
 
 # 💡 느낀점 or 기억할정보
+
+`1697`
+
+: `가장 빠른 최소 시간`  출력
+
+가진 의문 : n 이 k 가 첫번째로 되었을때 return 을 바로 해도 되는지
+
+→ BFS는 탐색할 때 "레벨 단위"로 진행되기 때문에, 큐에서 꺼낸 노드가 최단 경로로 도달한 노드이다. 즉, `n`에서 `k`로 가는 경로가 여러 개 있더라도, BFS는 `k`에 가장 먼저 도달한 경로가 가장 짧은 경로라는 것을 보장한다.
+
+**왜 다른 경로가 더 짧을 수 없는가?**
+
+- BFS는 먼저 현재 레벨에 있는 모든 노드를 탐색하고, 그 다음에 다음 레벨로 넘어간다.
+- 예를 들어, 출발점 `n`에서 한 번에 갈 수 있는 모든 노드를 탐색하고 나면, 이 노드들은 모두 출발점에서 동일한 거리에 위치하게 된다.
+- 만약 어떤 경로가 `k`에 도달하면, 이는 현재 레벨(거리)에서 가장 먼저 `k`에 도달한 것이므로, 더 짧은 경로는 존재할 수 없다.
+
+----
+
+위 문제와 비슷한 문제
+
+`12851`
+
+: `가장 빠른 최소 시간`  과 `그 시간으로 도달할 수 있는 경우의 수` 출력
+
+1697 문제와 다르게 방문의 중복을 허용해야 ‘가장 빠른 최소 시간’으로 도달하는 경우의 수를 구할 수 있다.
+
+```java
+if (time[next] == 0 ||time[next] == time[now] + 1){
+          que.offer(next);
+          time[next] = time[now] + 1;
+        }
+        //time[next] == 0 : 한 번도 방문하지 않은 경우
+        //time[next] == time[now] + 1 : 방문했었는데 한번의 연산으로 더 갈 수 있는 경우
+```
+
+위 조건문에서 중복을 처리하고,
+
+```java
+ if (min < time[now])
+        continue;
+ if  (next < 0 || next > 100_000)
+          continue;
+          
+          //위 조건문들로 범위 외의 next 값들과, min 값 보다 큰 time[now] 를 지나친다
+```
